# license_client

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  LicenseData_8cpp.html  LicenseDeactivate_8cpp.html  LicenseDeactivate_8cpp.js  LicenseDeactivate_8h.html  LicenseDeactivate_8h.js  LicensePanel_8cpp.html  LicensePanel_8h.html  LicensePanel_8h.js  LicensingDemoEditor_8cpp.html  LicensingDemoEditor_8h.html  LicensingDemoEditor_8h.js  LicensingDemoProcessor_8cpp.html  LicensingDemoProcessor_8cpp.js  LicensingDemoProcessor_8h.html  LicensingDemoProcessor_8h.js  README.md  README_8md.html  annotated.html  annotated_dup.js  choc__Base64_8h.html  choc__Base64_8h.js  classDeactivateItem-members.html  classDeactivateItem.html  classDeactivateItem.js  classLicenseDeactivate-members.html  classLicenseDeactivate.html  classLicenseDeactivate.js  classLicensePanel-members.html  classLicensePanel.html  classLicensePanel.js  classLicensePanel__inherit__graph.map  classLicensePanel__inherit__graph.md5  classLicensingDemoEditor-members.html  classLicensingDemoEditor.html  classLicensingDemoEditor.js  (+122 more)
.github/workflows/: build.yml
cmake/: Juce.cmake  Sodium.cmake
doxygen/: Doxyfile
examples/juce_plugin/: CMakeLists.txt  LicenseData.cpp  LicenseDeactivate.cpp  LicenseDeactivate.h  LicensePanel.cpp  LicensePanel.h  LicensingDemoEditor.cpp  LicensingDemoEditor.h  LicensingDemoProcessor.cpp  LicensingDemoProcessor.h
examples/minimal/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  (+29 more)
src/: CMakeLists.txt  foleys_License.cpp  foleys_License.h  foleys_Licensing.h  foleys_SharedObject.h  sodium.patch
src/juce/: foleys_JuceUtilities.h  foleys_PopupHolder.h
src/private/: choc_Base64.h  foleys_Checks.h  foleys_Crypto.cpp  foleys_Crypto.h  foleys_LicenseData.h  foleys_LicenseUpdater.cpp  foleys_LicenseUpdater.h  foleys_Observers.h  foleys_SharedObject.h  foleys_SystemInfo.cpp  foleys_SystemInfo.h  foleys_SystemInfo.mm
tests/: CMakeLists.txt
